<resources>
    <string name="hello_world">Hello World</string>
    <string name="btn_en">English</string>
    <string name="btn_ms">Malaysia</string>
    <string name="btn_nxt">NEXT</string>
    <string name="hometext">HOMEPAGE</string>
    <string name="search_language_title">Choose language</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="travel_doc">
        <item>Malaysia IC-NRIC</item>
        <item>Passport-P</item>
        <item>Visa-V</item>
    </string-array>
    <string-array name="language">
        <item>English-en</item>
        <item>Malay-ms</item>
        <item>Thai-th</item>
    </string-array>
    <string-array name="dummy_flight">
        <item>Subang-sbz</item>
        <item>KLia-kul</item>
        <item>Kota Bharu-kb</item>
        <item>Bintulu-btl</item>
        <item>Hanoi-kb</item>
        <item>Denpasar-kb</item>
        <item>Alor Setar-kb</item>
        <item>Penang-pen</item>
        <item>KLia2-klia2</item>

    </string-array>
    <string name="lang_country">Country</string>
    <string-array name="purpose">
        <item>Leisure</item>
        <item>Business</item>
    </string-array>
    <string-array name="month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar </item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="full_month">
        <item>January</item>
        <item>February</item>
        <item>March </item>
        <item>April</item>
        <item>May</item>
        <item>Jun</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="requestType">
        <item>Please select</item>
        <item>Return</item>
        <item>Refund</item>
        <item>Other</item>
    </string-array>
    <string-array name="itemCondition">
        <item>Please select</item>
        <item>Opened</item>
        <item>Unopened</item>
    </string-array>
    <string-array name="filter_review">
        <item>SHR,Highest Rate</item>
        <item>SLR,Lowest Rate</item>
        <item>SNF,Newest First</item>
        <item>SOF,Oldest First</item>
    </string-array>
    <string-array name="filter_code">
        <item>SAZ,A to Z</item>
        <item>SZA,Z to A</item>
        <item>SOS,On Sale </item>
        <item>SLP,Lowest Price</item>
        <item>SHP,Highest Price</item>
        <item>SHR,Highest Rating</item>
    </string-array>
    <string-array name="filter">
        <item>A to Z</item>
        <item>Z to A</item>
        <item>On Sale</item>
        <item>Lowest Price</item>
        <item>Highest Price</item>
        <item>Highest Rating</item>
    </string-array>
    <string-array name="search_code">
        <item>STB,Brand,shopbybrand.ShopByBrandListView</item>
        <item>STM,Merchant,merchant.MerchantDetailView</item>
        <item>STD,Department,department.DepartmentView</item>
        <item>STP,Product,productprofile.ProductProfileView</item>
        <item>STD_LVL1,Department,department.
            View</item>
        <item>STD_LVL2,Department,department.DepartmentView</item>
        <item>STD_LVL3,Department,department.DepartmentView</item>
        <item>STD_LVL4,Department,department.DepartmentView</item>
    </string-array>
    <string name="google_map_api_key"><![CDATA[AIzaSyCK7VCGJomx5--fAPlvJZYGRsq4jyVyev0]]></string>
    <string name="imal_google_map_api_key"><![CDATA[AIzaSyBPg4DVdsfxlhmo_OT2_9iNVHSKK3OPBEA]]></string>
    <string-array name="state">
        <item>Selangor-SL</item>
        <item>Pahang-PHG</item>
        <item>Johor-JHR</item>
        <item>Kedah-KDH</item>
        <item>Penang-PEN</item>
    </string-array>
    <string name="app_name">- TBD -</string>
    <string name="welcome_to_firefly">Welcome to Firefly</string>
    <string name="beyond_convenience">Beyond Convenience</string>
    <string name="home_firefly_desc">access your booking,mobile check-in and manage flight by sign-in the system</string>
    <string name="home_manage_flight">MANAGE FLIGHT</string>
    <string name="home_book_flight">BOOK FLIGHT</string>
    <string name="home_mobile_check_in">MOBILE CHECK-IN</string>
    <string name="home_sign_in">SIGN-IN</string>
    <string name="home_boarding">Boarding Pass</string>
    <string name="firefly_stroke">/Firefly</string>
    <string name="firefly_airlines_stroke">/Firefly Airlines</string>
    <string name="home_book_flight_landscape">Book Flight</string>
    <string name="home_boarding_pass_landscape">Boarding Pass</string>
    <string name="home_manage_flight_landscape">Manage Flight</string>
    <string name="home_mobile_check_in_landscape">Mobile Check-In</string>
    <string name="home_boarding_pass">BOARDING PASS</string>
    <string name="login_enter_email">User ID (Email) :</string>
    <string name="login_enter_password">Password</string>
    <string name="login_login_txt">Log in</string>
    <string name="login_register_txt">Register</string>
    <string name="login_no_account">Don\'t have account yet?</string>
    <string name="title_login_and_password">LOGIN AND PASSWORD</string>
    <string name="register_continue_button">Continue</string>
    <string name="register_username">Email </string>
    <string name="register_password">Password </string>
    <string name="profile_current_password">Current Password </string>
    <string name="profile_new_password">New Password </string>
    <string name="register_confirm_password">Confirm Password </string>
    <string name="register_firstname">First Name / Given Name </string>
    <string name="register_lastname">Last Name / Family Name </string>
    <string name="register_basic_information">LOGIN INFORMATION</string>
    <string name="register_basic_informationV2">BASIC INFORMATION</string>
    <string name="register_personal_information">PERSONAL INFORMATION</string>
    <string name="register_contact_information">CONTACT INFORMATION</string>
    <string name="register_loyalty_information">LOYALTY PROGRAMME</string>
    <string name="register_address_3">Address Line 3</string>
    <string name="register_country">Country</string>
    <string name="register_state">State</string>
    <string name="register_town">Town/City</string>
    <string name="register_language">Language</string>
    <string name="register_mobile_phone">Mobile / Home</string>
    <string name="register_alternate_phone">Alternate</string>
    <string name="register_bonuslink">BonusLink Card No:</string>
    <string name="register_fax">Fax</string>
    <string name="register_password_hint">Password must be at least 8 characters, no more than 16 characters, must include at least one upper case letter, one lower case letter, one numeric digit, and one non-alphanumeric. The password cannot contain a period(.) comma(,) or tilde(~).</string>
    <string name="register_password_policy">Password Policy</string>
    <string name="title_register">REGISTER</string>
    <string name="asterik">*</string>
    <string name="register_term_error_message">You must agree with terms &amp; conditions</string>
    <string name="book_flight">BOOK FLIGHT</string>
    <string name="book_flight_one_way">ONE WAY</string>
    <string name="book_flight_return">RETURN</string>
    <string name="book_flight_adult">Adult</string>
    <string name="book_flight_adult_year">2+ years old</string>
    <string name="book_flight_children">Children</string>
    <string name="book_flight_children_year">2+ years old</string>
    <string name="book_flight_infant">Infant</string>
    <string name="book_flight_infant_year"> 9 days - 2 years old</string>
    <string name="book_flight_availability">Sorry, no flights available. Please
select another date or station and try again.</string>
    <string name="book_flight_basic">BASIC</string>
    <string name="book_flight_premier">PREMIER</string>
    <string name="mobile_checkin">MOBILE CHECK-IN</string>
    <string name="manage_flight_na">No Flight Available</string>
    <string name="manage_flight">MANAGE FLIGHT</string>
    <string name="manage_flight_contact_email">Contact Email</string>
    <string name="manage_flight_confirmation_number">Confirmation Number</string>
    <string name="manage_flight_change_contact">CHANGE CONTACT</string>
    <string name="manage_flight_edit_passenger">EDIT PASSENGER</string>
    <string name="manage_flight_change_flight">CHANGE FLIGHT</string>
    <string name="manage_flight_change_seat">CHANGE SEAT</string>
    <string name="manage_flight_special_meal_request">SPECIAL MEAL REQUEST</string>
    <string name="manage_flight_add_payment">ADD PAYMENT</string>
    <string name="manage_flight_send_itinenary">SEND ITINERARY</string>
    <string name="manage_flight_contact_detail">CONTACT DETAIL</string>
    <string name="manage_flight_sent_itinenary">SEND ITINERARY</string>
    <string name="manage_flight_seat_optional">Seat Selection (Optional)</string>
    <string name="general_continue">Continue</string>
    <string name="general_email_addresss">Email Address</string>
    <string name="general_travel_purpose">Primary Purpose of Your Travel</string>
    <string name="agreeTnc">I agree with the Terms &amp; Conditions</string>
    <string name="subscribe">Yes, I do not want to receive promotional information from Firefly and its partners</string>
    <string name="alertTNC">You must agree to the terms.</string>
    <string name="bonuslink_hint">e.g. 6018XXXXXXXXXXXX</string>
    <string name="yes_proceed">Yes, I want to be protected during my trip</string>
    <string name="no_thank">No, Thank You.</string>
    <string name="boardingPassTitle">No boarding pass available.</string>
    <string name="boardingPassNA">Boarding Pass will be displayed after the check-in process is complete. </string>
    <string name="boarding_pass">BOARDING PASS</string>
    <string name="title_activity_update_profile">UPDATE INFORMATION</string>
    <string name="update_profile_logininfo">Login Information</string>
    <string name="update_profile_contactinfo">Contact Information</string>
    <string name="update_profile_btn">Update</string>
    <string name="ctn_profile_btn">CONTINUE</string>
    <string name="only_fill">Only fill in this section if you wish to change your password</string>
    <string name="mobile_checkin_na">No Flight Available For Check-In</string>
    <string name="mobile_checkin_check1">Yes, I am aware that the dangerous good above are not permitted in my bag, luggage has been in my possession at all times and i am aware of the contents in my bag.</string>
    <string name="mobile_checkin_check2">Yes, I have read and agree with the important information.</string>
    <string name="mobile_checkin_check3">Yes, I have access to a printer and print the mobile check-in boarding pass from my email if my departing station is NOT Subang(SZB), Penang(PEN), Johor Bharu(JHB) or Kota Bharu(KBR).</string>
    <string name="title_activity_terms">Terms</string>
    <string name="title_terms">TERMS AND CONDITIONS</string>
    <string name="lang_next">Next ></string>
    <string name="btn_continue">Continue ></string>
    <string name="book_flight_departure_airport">ORIGIN</string>
    <string name="book_flight_arrival_airport">DESTINATION</string>
    <string name="book_flight_departure_date">DEPARTURE DATE</string>
    <string name="book_flight_arrival_date">RETURN DATE</string>
    <string name="register_select_language">Please select language</string>
    <string name="register_general_loading">Loading ...</string>
</resources>