<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:gravity="center"
            android:background="@color/search_flight_background"
            android:paddingRight="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:gravity="center"
                android:layout_marginBottom="5dp">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_marginTop="5dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:id="@+id/btnReturn">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/book_flight_return"
                            android:textStyle="bold"
                            android:padding="6dp"
                            android:id="@+id/txtReturn" />
                    </LinearLayout>

                    <LinearLayout
                        android:clickable="true"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:id="@+id/btnOneWay">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/book_flight_one_way"
                            android:textStyle="bold"
                            android:padding="6dp"
                            android:id="@+id/txtOneWay" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnDepartureFlight"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/bottom_line_with_transparent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="0.75"
                        android:layout_height="match_parent"
                        android:gravity="center|left">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/book_flight_departure_airport"
                            android:id="@+id/txtDepartureFlight"
                            android:textSize="18dp"
                            android:textColor="@color/white"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnArrivalFlight"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="15dp"
                    android:background="@drawable/bottom_line_with_transparent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="0.75"
                        android:layout_height="wrap_content"
                        android:gravity="center|left">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/book_flight_arrival_airport"
                            android:id="@+id/txtArrivalFlight"
                            android:textSize="18dp"
                            android:textColor="@color/white"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/departureDateBlock"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/bottom_line_with_transparent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="0.75"
                        android:layout_height="wrap_content"
                        android:gravity="center|left">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/book_flight_departure_date"
                            android:textSize="18dp"
                            android:textColor="@color/white"
                            android:id="@+id/bookFlightDepartureDate"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/returnDateBlock"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="15dp"
                    android:background="@drawable/bottom_line_with_transparent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="0.75"
                        android:layout_height="wrap_content"
                        android:gravity="center|left">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/book_flight_arrival_date"
                            android:textSize="18dp"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:id="@+id/bookFlightReturnDate"/>
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"
                        android:orientation="vertical">

                    </LinearLayout>

                    <Button
                        android:id="@+id/btnSearchFlight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:text="@string/btn_continue"
                        android:background="@drawable/curve_btn_default_theme"
                        android:textSize="16dp"
                        android:textColor="@color/white"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"
                        android:orientation="vertical">

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>