<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:id="@+id/selectionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="1">


            </LinearLayout>


            <LinearLayout
                android:id="@+id/chooseLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="25dp"
                android:layout_weight="0.4"
                android:alpha="0"
                android:orientation="vertical"
                android:visibility="visible"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/dark_lvl1"
                        android:gravity="center|left"
                        android:orientation="vertical"
                        android:padding="0.7dp"></LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/bottom_line_border"
                        android:clickable="true"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.3"
                            android:background="@drawable/right_bottom_line_border"
                            android:gravity="center"
                            android:orientation="vertical">

                            <com.app.tbd.utils.FontStyle.PlayTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/register_country"
                                android:textColor="@color/dark_lvl6"
                                android:textSize="15dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.7"
                            android:background="@drawable/right_bottom_line_border"
                            android:orientation="vertical">

                            <com.app.tbd.utils.FontStyle.PlayTextView
                                android:id="@+id/txtLangCountry"
                                android:clickable="false"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/register_general_loading"
                                android:padding="10dp"
                                android:textColorHint="@color/grey" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/bottom_line_border"
                        android:clickable="true"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.3"
                            android:background="@drawable/right_bottom_line_border"
                            android:gravity="center"
                            android:orientation="vertical">

                            <com.app.tbd.utils.FontStyle.PlayTextView
                                android:id="@+id/register_language"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/register_language"
                                android:textColor="@color/dark_lvl6"
                                android:textSize="15dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.7"
                            android:background="@drawable/right_bottom_line_border"
                            android:orientation="vertical">

                            <com.app.tbd.utils.FontStyle.PlayTextView
                                android:id="@+id/txtLangLanguage"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:clickable="false"
                                android:hint="@string/register_select_language"
                                android:padding="10dp"
                                android:textColorHint="@color/grey" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:gravity="bottom"
                        android:orientation="vertical">

                        <com.app.tbd.utils.FontStyle.PlayButtonText
                            android:id="@+id/btn_nxt"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/red_button_click"
                            android:text="@string/lang_next"
                            android:textColor="@color/white"
                            android:textSize="16dp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/imageLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tbd_icon" />
    </LinearLayout>

</LinearLayout>